home page desktop

--- a/src/main/_baublecode.scss
+++ b/src/main/_baublecode.scss
@@ -1,8 +1,78 @@
-body {
-    background-color: lightblue;
+html::after {
+    content: "";
+    background: url(../images/bg-home.jpg
+    ) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    position: absolute;
+    z-index: -1;
+}
+
+.container {
+    max-width: 960px;
+    margin: 0 auto;
+
+}
+.brand-name {
+    background: url(../images/bg-brand.jpg) no-repeat right center;
+    height: 100%;
+    margin-top: 3rem;
+    h1 {
+        background: -webkit-linear-gradient(#eab582, #161906);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        font-family: 'Patua One', cursive;
+        font-weight: 100;
+        font-size: 3.5rem;
+        margin-right: 6rem;
+        padding: 2rem;
+        letter-spacing: 7px;
+    }
+}
+.brand-subname {
+    margin: -6rem 3.75rem 2rem 0;
+    span {
+        color: $body-background;
+        font-weight: 400;
+        font-size: 2.4rem;
+    }
+    img {
+        width: 3.2rem;
+    }
 }
 // footer
-.footer {
-    background-color: #1c2336;
+footer {
+    background: url(../images/bg-footer.jpg) no-repeat left center;
+    background-color: #826453;
     color: #fff;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    overflow: hidden;
+    div {
+        display: flex;
+        justify-content: space-between;
+    }
+    p {
+        display: flex;
+        align-items: flex-end;
+        font-size: 2rem;
+        padding: 0;
+    }
+    .icon {
+        background-color: #af9c91;
+        padding: 0 .5rem;
+        img {
+            position: relative;
+            top: 4px;
+            width: 25px;
+        }
+    }
 }
