--- a/src/modules/_baublecode-slideshow.scss
+++ b/src/modules/_baublecode-slideshow.scss
@@ -7,10 +7,39 @@
 
 /* Slideshow container */
 .slideshow {
-    max-width: 1000px;
+    max-width: 350px;
     position: relative;
     margin: auto;
+    z-index: 4;
 }
+// .slides {
+//     position: relative;
+// }
+.slideshow::after {
+    content: "";
+    position: absolute;
+    opacity: 0.5;
+    top: 1.5rem;
+    // right: 0;
+    // left: 0;
+    width: 500px;
+    height: 240px;
+    z-index: -1;
+    background-color: #fff;
+}
+.slideshow::before {
+    content: "";
+    position: absolute;
+    opacity: 0.5;
+    top: 1.5rem;
+    right: 0;
+    // left: 0;
+    width: 500px;
+    height: 240px;
+    z-index: -1;
+    background-color: #fff;
+}
+
 /* Next & previous buttons */
 .prev, .next {
     cursor: pointer;
