--- a/src/modules/_baublecode-navbar.scss
+++ b/src/modules/_baublecode-navbar.scss
@@ -30,10 +30,13 @@ div.navBar {
             overflow: visible;
         }
         ul{
+            margin-top: 2rem;
             li {
-                border-radius: 5px;
                 text-align: center;
-                @include linx($text-color, $heading-color, $heading-color);
+                @include linx($text-color, $text-color, $text-color);
+                &:hover {
+                    background-color: rgba(255,255, 255, .5);
+                }
                 a { 
                     font-weight: bold;
                     display: block;
@@ -50,8 +53,6 @@ div.navBar {
                         justify-content: center;
                         align-items: center;
                         width: 110px;
-                        height: 56px;
-                        &.logo { padding: 0; }
                     }
                 }
             }
