--- a/src/modules/_baublecode-accordion.scss
+++ b/src/modules/_baublecode-accordion.scss
@@ -3,17 +3,18 @@
 .accordion {
     display: flex;
     justify-content: space-between; 
-    background-color: #f5f5f5;
+    background-color: #e6e4e1;
     color: #444;
     cursor: pointer;
     outline: none;
     transition: 0.4s;
+    box-shadow: -5px 5px 10px #000;
   }
   
   /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
-  .accordion-active, .accordion:hover {
-    background-color: #d4c9c5;
-  }
+  // .accordion-active, .accordion:hover {
+  //   background-color: #d4c9c5;
+  // }
   
   /* Style the accordion panel. Note: hidden by default */
   .accordion-panel {
@@ -21,4 +22,5 @@
     background-color: white;
     display: none;
     overflow: hidden;
+    box-shadow: -5px 5px 10px #000;
   }
