--- a/src/modules/_baublecode-accordion.scss
+++ b/src/modules/_baublecode-accordion.scss
@@ -22,5 +22,5 @@
     background-color: white;
     display: none;
     overflow: hidden;
-    box-shadow: -5px 5px 10px #000;
+    box-shadow: -5px 5px 10px #2e3030;
   }
