--- a/src/main/_variables.scss
+++ b/src/main/_variables.scss
@@ -1,7 +1,7 @@
 
 $body-background:   #fefffa;
 $nav-color:         #d4c9c5;
-$nav-hover:         #b77869;
+$nav-hover:         #826453;
 $header-border:     #e3e3e3;
 $text-color:        #fff;
 $heading-color:     #dadcc6;
