--- a/src/modules/_baublecode-navbar.scss
+++ b/src/modules/_baublecode-navbar.scss
@@ -33,7 +33,7 @@ div.navBar {
             margin-top: 2rem;
             li {
                 text-align: center;
-                @include linx($text-color, $text-color, $text-color);
+                @include linx($text-color, $nav-hover, $nav-hover);
                 &:hover {
                     background-color: rgba(255,255, 255, .5);
                 }
