deleted footer from shop page

--- a/src/main/_base.scss
+++ b/src/main/_base.scss
@@ -1,6 +1,11 @@
 html {
     background-color: #b9a9a9;
 }
+// .wrapper{
+//     display: flex;
+//     grid-template-rows: auto 1fr auto;
+//     min-height: 100vh;
+// }
 %background {
     content: "";
     -webkit-background-size: cover;
