--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,5 +15,5 @@
 @import "modules/baublecode-accordion";
 @import "modules/baublecode-slideshow";
 
-@import "main/baublecode";
+@import "main/base";
 
