fixed path of image bg-brand

--- a/src/main/_base.scss
+++ b/src/main/_base.scss
@@ -34,7 +34,7 @@ html {
     margin: 0 auto;
 }
 .brand-name {
-    background: url(../images/bg-brand.jgp) no-repeat right center;
+    background: url(../images/bg-brand.jpg) no-repeat right center;
     height: 100%;
     margin-top: 3rem;
     h1 {
